@@ -31,7 +31,6 @@ jobs:
           - "5.18"
           - "5.16"
           - "5.14"
-          - "5.12"
 
     env:
       CIP_TAG: ${{ matrix.cip_tag }}
